--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><%- content %></h1>
+    <h1><%- title %></h1>
+    <input type="text" id="content" name="content">
+    <input type="submit" id="send" value="儲存">
+    <ul>
+        <li>測試<input type="button" value="刪除"></li>
+    </ul>
+    <script src="/js/all.js"></script>
 </body>
 </html>
