--- a/views/index.ejs
+++ b/views/index.ejs
@@ -7,11 +7,14 @@
     <title>Document</title>
 </head>
 <body>
-    <h1><%- title %></h1>
+    <h1>代辦事項:</h1>
     <input type="text" id="content" name="content">
     <input type="submit" id="send" value="儲存">
     <ul>
-        <li>測試<input type="button" value="刪除"></li>
+        <% for(item in todolist){ %>
+            <li><%- todolist[item].content %>
+            <input type="button" value="刪除"></li>
+        <% } %>
     </ul>
     <script src="/js/all.js"></script>
 </body>
